# VaultKey-Stack

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  USER_GUIDE.md
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  protocol.rs  tests.rs  usb.rs
docs/: reproducible_builds.md  sbom.json  threat_model.md
firmware/: CMakeLists.txt  Dockerfile  HARDWARE.md  build_docker.bat  build_docker.sh  pico_sdk_import.cmake
firmware/include/: aes.h  tusb_config.h  vault.h  vk_argon2.h  vk_crypto.h  vk_fido.h  vk_keyboard.h  vk_protocol.h  vk_totp.h
firmware/lib/argon2/: argon2.c  argon2.h
firmware/lib/cb0r/: cb0r.c  cb0r.h
firmware/lib/nacl/: tweetnacl.c  tweetnacl.h
firmware/lib/p256/: p256_rng.c
firmware/lib/sha256/: sha256.c  sha256.h
firmware/src/: aes.c  hardening.c  main.c  test_blinky.c  usb_descriptors.c  vault.c  vk_argon2.c  vk_crypto.c  vk_fido.c  vk_keyboard.c  vk_protocol.c  vk_totp.c
protocol/v1/: README.md  schema.cddl
