[package]
name = "vaultkey-app"
version = "0.1.0"
description = "VaultKey Stack Desktop Application"
authors = ["VaultKey Stack Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vaultkey_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
serialport = "4.2"
hidapi = "2.6"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["derive"] }
rand = "0.8"

